--- a/RReviews/RReviews.Web/Views/Home/about.cshtml
+++ b/RReviews/RReviews.Web/Views/Home/about.cshtml
@@ -1,10 +1,7 @@
-﻿
-@{
-    Layout = "~/Views/Shared/_Layout.cshtml";
+﻿@{
+    ViewBag.Title = "About";
 }
+<h2>@ViewBag.Title.</h2>
+<h3>@ViewBag.Message</h3>
 
-<html>
-<body>
-
-</body>
-</html>
+<p>Use this area to provide additional information.</p>
