--- a/RReviews/RReviews.Web/Views/Home/contact.cshtml
+++ b/RReviews/RReviews.Web/Views/Home/contact.cshtml
@@ -1,17 +1,17 @@
-﻿
-@{
-    Layout = "~/Views/Shared/_Layout.cshtml";
+﻿@{
+    ViewBag.Title = "Contact";
 }
+<h2>@ViewBag.Title.</h2>
+<h3>@ViewBag.Message</h3>
 
-<html>
-<body>
-    
-    <div class="panel panel-default">
-        <div class="panel-heading">Panel heading</div>
-        <div class="panel-body">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-        </div>
-    </div>
+<address>
+    One Microsoft Way<br />
+    Redmond, WA 98052-6399<br />
+    <abbr title="Phone">P:</abbr>
+    425.555.0100
+</address>
 
-</body>
-</html>
+<address>
+    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
+    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+</address>
