--- a/RReviews/RReviews.Web/Views/Search/Search.cshtml
+++ b/RReviews/RReviews.Web/Views/Search/Search.cshtml
@@ -1,7 +1,5 @@
 ﻿@model IEnumerable<RestaurantModels.Restaurant>
-@{
-    Layout = "~/Views/Shared/_Layout.cshtml";
-}
+
 
 <!DOCTYPE html>
 
@@ -11,16 +9,12 @@
     <title>search</title>
 </head>
 <body>
-    @for (int i=0;  i < Model.Count() - 1;)
+    @for (int i = 0; i < Model.Count() - 1;)
     {
         <div class="row">
             <div class="col-sm-4">
                 <b>@Model.ElementAt(i).Name</b>
-                <table>
-                    <tbody>
-                        <tr>@Model.ElementAt(i).City,  @Model.ElementAt(i++).State</tr>
-                    </tbody>
-                </table>
+                <div>@Model.ElementAt(i).City,  @Model.ElementAt(i++).State</div>
             </div>
             <div class="col-sm-4">
                 <b>@Model.ElementAt(i).Name</b>
