--- a/RReviews/RReviews.Web/Views/Shared/_Layout.cshtml
+++ b/RReviews/RReviews.Web/Views/Shared/_Layout.cshtml
@@ -9,30 +9,31 @@
 </head>
 <body>
     <header>
-    <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-        <div class="container">
-            <label class="navbar-brand">R-Reviews</label>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarResponsive">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="@Url.Action("index","Home")">Home<span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="@Url.Action("about", "Home")">About<span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="@Url.Action("contact","Home")">Contact<span class="sr-only">(current)</span></a>
-                    </li>
-                </ul>
+        <!-- Navigation -->
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+            <div class="container">
+                <label class="navbar-brand">R-Reviews</label>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarResponsive">
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" href="@Url.Action("index","Home")">Home<span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="@Url.Action("about", "Home")">About<span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="@Url.Action("contact","Home")">Contact<span class="sr-only">(current)</span></a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-        </div>
-    </nav>
-        </header>
+        </nav>
+    </header>
     <div>
+        <div style="height:20px"></div>
         @RenderBody()
     </div>
     <footer class="py-5 bg-dark">
@@ -41,8 +42,8 @@
         </div>
         <!-- /.container -->
     </footer>
-    <!-- Bootstrap core JavaScript -->
-    <script src="~/Scripts/jquery-3.3.1.min.js"></script>
-    <script src="~/Scripts/bootstrap.bundle.min.js"></script>
+    @Scripts.Render("~/Scripts/jquery-3.3.1.min.js")
+    @Scripts.Render("~/Scripts/bootstrap.bundle.min.js")
+    @RenderSection("scripts", required: false)
 </body>
 </html>
