--- a/RReviews/RReviews.Web/Views/Restaurant/Details.cshtml
+++ b/RReviews/RReviews.Web/Views/Restaurant/Details.cshtml
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div>
-        <h4>Restaurant</h4>
+        <h4>@Model.Name</h4>
         <hr />
         <dl class="dl-horizontal">
             <dt>
