finished crud and searching

--- a/RReviews/RReviews.Web/Views/Home/index.cshtml
+++ b/RReviews/RReviews.Web/Views/Home/index.cshtml
@@ -14,15 +14,13 @@
     </style>
 </head>
 <body>
-    <!-- Header - set the background image for the header in the line below -->
     <header class="py-5 bg-image-full" style="background-image: url('../../homepage_bottom_right_bottom.jpg');">
         <div style="height:200px"></div>
     </header>
-    <!-- Content section -->
     <section class="py-5">
         <div class="container">
             <h1>Looking For A Restaurant?</h1>
-            <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+            <p class="lead">Search restaurants by name or browse by name, city, or review rating</p>
             <input type="button" class="btn btn-primary btn-block" value="Find Restaurants" onclick="location.href='@Url.Action("Search","Search", new { type=" "})'" />
             <div style="height:150px">
                 <div class="panel panel-default">
@@ -65,16 +63,13 @@
             </div>
         </div>
     </section>
-    <!-- Image Section - set the background image for the header in the line below -->
     <section class="py-5 bg-image-full" style="background-image: url('../../20140721-restaurant.png');">
-        <!-- Put anything you want here! There is just a spacer below for demo purposes! -->
         <div style="height: 200px;"></div>
     </section>
-    <!-- Content section -->
     <section class="py-5">
         <div class="container">
             <h1>Restaurant Owner? Add Yourself To The Network!</h1>
-            <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+            <p class="lead">Add a new restaurant or edit an existing one</p>
             <input type="button" class="btn btn-primary btn-block" value="Add Restaurant" onclick="location.href='@Url.Action("index","Restaurant")'" />
         </div>
     </section>
