--- a/RReviews/RReviews.Web/Views/Restaurant/Details.cshtml
+++ b/RReviews/RReviews.Web/Views/Restaurant/Details.cshtml
@@ -56,8 +56,7 @@
         </dl>
     </div>
     <p>
-        @Html.ActionLink("Edit", "Edit", new { id = Model.ID }) |
-        @Html.ActionLink("Back to List", "Index")
+        @Html.ActionLink("Edit", "Edit", new { id = Model.ID })
     </p>
 </body>
 </html>
