--- a/RReviews/RReviews.Web/Views/Shared/_Layout.cshtml
+++ b/RReviews/RReviews.Web/Views/Shared/_Layout.cshtml
@@ -3,13 +3,12 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>R-Reviews</title>
+    <title>Spread The Word</title>
     <link href="~/Content/bootstrap.min.css" rel="stylesheet">
     <link href="~/Content/full-width-pics.css" rel="stylesheet">
 </head>
 <body>
     <header>
-        <!-- Navigation -->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
             <div class="container">
                 <label class="navbar-brand">R-Reviews</label>
@@ -40,7 +39,6 @@
         <div class="container">
             <p class="m-0 text-center text-white">Copyright &copy; Your Website 2018</p>
         </div>
-        <!-- /.container -->
     </footer>
     @Scripts.Render("~/Scripts/jquery-3.3.1.min.js")
     @Scripts.Render("~/Scripts/bootstrap.bundle.min.js")
