--- a/RReviews/RReviews.Web/Views/Restaurant/Delete.cshtml
+++ b/RReviews/RReviews.Web/Views/Restaurant/Delete.cshtml
@@ -62,7 +62,7 @@
     
             <div class="form-actions no-color">
                 <input type="submit" value="Delete" class="btn btn-default" /> |
-                @Html.ActionLink("Back to List", "Index","Review",null,null)
+                @Html.ActionLink("Back to List", "Index","Restaurant",null,null)
             </div>
         }
     </div>
