--- a/RReviews/RReviews.Web/Views/Restaurant/Edit.cshtml
+++ b/RReviews/RReviews.Web/Views/Restaurant/Edit.cshtml
@@ -73,7 +73,7 @@
     }
     
     <div>
-        @Html.ActionLink("Back to List", "Index")
+        @Html.ActionLink("Back", "Details",new { id = Model.ID })
     </div>
 </body>
 </html>
