--- a/RReviews/RReviews.Web/Views/Review/Create.cshtml
+++ b/RReviews/RReviews.Web/Views/Review/Create.cshtml
@@ -1,9 +1,9 @@
 ﻿@using RReviews.BLL
 @using NLog;
 @model RestaurantModels.Review
-    @{ 
-        Logger log = LogManager.GetCurrentClassLogger();
-    }
+@{
+    Logger log = LogManager.GetCurrentClassLogger();
+}
 
 
 <!DOCTYPE html>
@@ -15,13 +15,13 @@
 </head>
 <body>
     @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/jqueryval")
-    
-    
-    @using (Html.BeginForm()) 
+    @Scripts.Render("~/bundles/jqueryval")0
+
+
+    @using (Html.BeginForm())
     {
         @Html.AntiForgeryToken()
-        
+
         <div class="form-horizontal">
             <h4>Review</h4>
             <hr />
@@ -33,7 +33,7 @@
                     @Html.ValidationMessageFor(model => model.ReviewerName, "", new { @class = "text-danger" })
                 </div>
             </div>
-    
+
             <div class="form-group">
                 @Html.LabelFor(model => model.ReviewComment, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
@@ -41,7 +41,7 @@
                     @Html.ValidationMessageFor(model => model.ReviewComment, "", new { @class = "text-danger" })
                 </div>
             </div>
-    
+
             <div class="form-group">
                 @Html.LabelFor(model => model.ReviewRating, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
@@ -49,7 +49,7 @@
                     @Html.ValidationMessageFor(model => model.ReviewRating, "", new { @class = "text-danger" })
                 </div>
             </div>
-    
+
             <div class="form-group">
                 <div class="col-md-offset-2 col-md-10">
                     <input type="submit" value="Create" class="btn btn-default" />
@@ -57,9 +57,9 @@
             </div>
         </div>
     }
-    
+
     <div>
-        @Html.ActionLink("Back to List", "Search","Search",null,null)
+        @Html.ActionLink("Back to List", "Search", "Search", null, null)
     </div>
 </body>
 </html>
