--- a/RReviews/RReviews.Web/Views/Shared/_Layout.cshtml
+++ b/RReviews/RReviews.Web/Views/Shared/_Layout.cshtml
@@ -11,7 +11,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
             <div class="container">
-                <label class="navbar-brand">R-Reviews</label>
+                <label class="navbar-brand">Spread The Word</label>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
