--- a/RReviews/RReviews.Web/Views/Home/index.cshtml
+++ b/RReviews/RReviews.Web/Views/Home/index.cshtml
@@ -14,7 +14,7 @@
     </style>
 </head>
 <body>
-    <header class="py-5 bg-image-full" style="background-image: url('../../homepage_bottom_right_bottom.jpg');">
+    <header class="py-5 bg-image-full" style="background-image: url(https://s3.us-east-2.amazonaws.com/kbaynardbucket/homepage_bottom_right_bottom.jpg);">
         <div style="height:200px"></div>
     </header>
     <section class="py-5">
@@ -63,7 +63,7 @@
             </div>
         </div>
     </section>
-    <section class="py-5 bg-image-full" style="background-image: url('../../20140721-restaurant.png');">
+    <section class="py-5 bg-image-full" style="background-image: url(https://s3.us-east-2.amazonaws.com/kbaynardbucket/20140721-restaurant.png);">
         <div style="height: 200px;"></div>
     </section>
     <section class="py-5">
