--- a/RReviews/RReviews.Web/Views/Shared/_Layout.cshtml
+++ b/RReviews/RReviews.Web/Views/Shared/_Layout.cshtml
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Spread The Word</title>
-    <link href="~/Content/bootstrap.min.css" rel="stylesheet">
-    <link href="~/Content/full-width-pics.css" rel="stylesheet">
+    <link href="//netdna.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet">
+    <link href="//startbootstrap.com/template-overviews/full-width-pics" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -32,7 +32,7 @@
         </nav>
     </header>
     <div>
-        <div style="height:20px"></div>
+        <div style="height:70px"></div>
         @RenderBody()
     </div>
     <footer class="py-5 bg-dark">
